--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,21 +1,9 @@
-@media (prefers-color-scheme: light) {
-  .main {
-    background-color: #222;
-    padding-top: 1%;
-    padding-bottom: 1%;
-  }
-
-  .content {
-    color: white;
-  }
+.main {
+  background-color: #222;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
-@media (prefers-color-scheme: dark) {
-  .main {
-    background-color: #ffffff;
-  }
-
-  .content {
-    color: #666666;
-  }
+.content {
+  color: white;
 }
