--- a/src/styles/Reservation.module.css
+++ b/src/styles/Reservation.module.css
@@ -1,3 +1,11 @@
+.container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .title {
     font-size: 3rem;
     color: #222;
