--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,24 +15,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-
-  body {
-    color: white;
-    background: rgb(35, 35, 35);
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  html {
-    color-scheme: light;
-  }
-
-  body {
-    color: #666666;
-    background: rgb(255, 255, 255);
-  }
+body {
+  color: #666666;
+  background: rgb(255, 255, 255);
 }
